--- a/src/components/UI/Modal/style.module.css
+++ b/src/components/UI/Modal/style.module.css
@@ -3,7 +3,8 @@
   z-index: 500;
   background-color: white;
   width: 70%;
-  border: 1px solid #ccc;
+  border: none;
+  border-radius: 5px;
   box-shadow: 1px 1px 1px black;
   padding: 16px;
   left: 15%;
